--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Mi primer repositorio</h1>
+    <h2>De la rama</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium dicta cupiditate molestiae dolore neque corporis laborum magni sunt alias laboriosam! Praesentium animi voluptatum quam fuga voluptas reprehenderit, alias ex rem!
+    Aliquid modi commodi, numquam aperiam cumque tempore eveniet mollitia dolor unde fuga cupiditate repudiandae suscipit corporis rerum error a corrupti veritatis ullam autem qui ipsa est dolores officiis? Odio, quas?
+    Voluptatem.</p>
 </body>
 </html>
